--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
         "symfony/flex": "2.4.7",
         "symfony/form": "6.4.13",
         "symfony/framework-bundle": "6.4.13",
+        "symfony/http-client": "6.4.15",
         "symfony/http-foundation": "6.4.15",
         "symfony/http-kernel": "6.4.15",
         "symfony/lock": "6.4.13",
