--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "rollerworks/password-strength-validator": "2.0.2",
         "ryakad/pandoc-php": "1.0.0",
         "sentry/sentry-symfony": "5.0.1",
+        "spatie/pdf-to-image": "dev-main",
         "stof/doctrine-extensions-bundle": "1.12.0",
         "symfony/asset": "6.4.13",
         "symfony/cache": "6.4.14",
