--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,7 @@
         "twig/extra-bundle": "3.15.0",
         "twig/inky-extra": "3.15.0",
         "twig/intl-extra": "3.15.0",
+        "twig/string-extra": "^3.21",
         "twig/twig": "3.15.0",
         "zircote/swagger-php": "4.11.1"
     },
