--- a/config/packages/fos_ckeditor.yaml
+++ b/config/packages/fos_ckeditor.yaml
@@ -10,7 +10,7 @@ parameters:
   <ul><ol><li>
   <strong><b><em><u><s><sup><sub><pre>
   <table><tbody><thead><tr><td><th><caption>
-  <ltb-abbr><div><symbol>"
+  <ltb-abbr><div>"
 
 fos_ck_editor:
   base_path: build/ckeditor
@@ -26,7 +26,7 @@ fos_ck_editor:
       filebrowserWindowWidth: "40%"
       filebrowserWindowHeight: "40%"
       format_tags: "p;h1;h2;citation;reference"
-      extraPlugins: "image2,wordcount,latexeditor,sourcedialog"
+      extraPlugins: "image2,wordcount,latexeditor,sourcedialog,specialchar"
       extraAllowedContent: "span(latex-figure,latex-figure-inline);figure(latex-figure);figcaption(latex-caption);img(latex-image);a[data-concept-id](concept-link);ltb-abbr[data-abbr-id];symbol"
       removePlugins: "image,dialogadvtab"
       removeButtons: "Underline"
@@ -49,7 +49,7 @@ fos_ck_editor:
       ltb_toolbar: [ "@text_tools", "@ltb_tools", "/", "@font_tools", "@edit_tools" ]
     items:
       edit_tools: [ "Cut", "Copy", "Paste", "PasteText", "PasteFromWord", "-", "RemoveFormat", ",", "Sourcedialog", "Maximize"]
-      text_tools: [ "Bold", "Italic", "Subscript", "Superscript", "-",  "Symbol", "NumberedList", "BulletedList", "-", "Table" ]
+      text_tools: [ "Bold", "Italic", "Subscript", "Superscript", "-",  "SpecialChar", "NumberedList", "BulletedList", "-", "Table" ]
       ltb_tools:  [ "Link", "Anchor", "Image", "LatexEditor", "ConceptSelector", "AbbreviationSelector" ]
       font_tools: [ "Format", "TextColor" ]
   plugins:
