--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,7 +28,7 @@ security:
         success_handler: App\Security\Http\Authentication\AuthenticationSuccessHandler
         user_identifier_property: email
       form_login:
-        login_path: app_default_landing
+        login_path: admin_login
         success_handler: App\Security\Http\Authentication\AuthenticationSuccessHandler
         username_parameter: "login[_username]"
         password_parameter: "login[_password]"
