added UCGIS GIS&T footer to concept print pdf; added linewidth to figure images reduced right margin; finalize the image resolver;
# Conflicts:
#	composer.lock
#	config/services.yaml
#	src/ConceptPrint/Section/ConceptSection.php
#	src/ConceptPrint/Section/LtbSection.php
#	src/Controller/PrintController.php

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -44,6 +44,10 @@ services:
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
 
+  # Include the class used to resolve images when printing concepts;
+  # The ConceptPrint directory is excluded from autoconfigure and autowire
+  App\ConceptPrint\ImageResolver:
+
   # Overwrite for JMS serializer to always use the identical names
   jms_serializer.naming_strategy:
     alias: App\Serializer\Metadata\PropertyMetadata\SerializedNameWithIdenticalPropertyNamingStrategy
